# dioxus-template

./: README.md  common.rhai  init-common.rhai  init-script.rhai
.github/workflows/: main.yml
Bare-Bones/: init.rhai
Bare-Bones/assets/: main.css
Bare-Bones/src/: main.rs
Barebones/: README.md
Barebones/assets/: main.css
Barebones/src/: main.rs
Jumpstart/: README.md  conditional-files.rhai
Jumpstart/assets/styling/: calculator.css
Jumpstart/src/: main.rs
Jumpstart/src/components/: calculator.rs  echo.rs
Workspace/: Cargo.toml  README.md  cargo-generate.toml  conditional-files.rhai  init.rhai
Workspace/desktop/src/: main.rs
Workspace/mobile/src/: main.rs
Workspace/server/src/: lib.rs
Workspace/ui/src/: calculator.rs  echo.rs
Workspace/web/src/: main.rs
scripts/: generate-barebones-all.exp  generate-jumpstart-all.exp  generate-workspace-all.exp
